tests/baselines/reference/emitArrowFunctionWhenUsingArguments03_ES6(alwaysstrict=true).errors.txt
emitArrowFunctionWhenUsingArguments03_ES6.ts(1,5): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments03_ES6.ts (1 errors) ====
    var arguments;
        ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    var a = () => arguments;